can-socket/tests/compile-fail/id_too_high1.rs
fn main() {
	let _id = can_socket::can_id!(0x2000_0000);
}
